@@ -1,3 +1,8 @@
+MJ 09/09/05
+- Small changes in WireGraph to support non-overly graphs better (see classdocs)
+- NeighbourListGraph can now be constructed with a specified size
+- Some documentation fixes
+
 MJ 29/08/05
 - Added possibility to look up protocol names based on pid in Configuration.
   Error messages should use that method instead of dumping the pid.
